<resources>
    <string name="app_name">Favorite Books</string>
    <string name="when_breath_becomes_air">When Breath Becomes Air</string>
    <string name="paul_kalanithi">Paul Kalanithi</string>
    <string name="nonfiction_memoir">Nonfiction - Memoir</string>
    <string name="_2016">2016</string>
    <string name="book_name">Book Name</string>
    <string name="book_genre">Book Genre</string>
    <string name="_2010">2010</string>
    <string name="year_published">Year Published:</string>
    <string name="_description">Lorem ipsum dolor sit amet, ullum veniam pri ei. Ea affert facilisi sit, ex inani voluptua est, eu omnis salutandi has. Ipsum debet scripserit ei pro. Graeci legimus duo id, ne mea doctus adipisci. Eirmod fastidii vel ut, id vim putant dictas. In erat clita reformidans his, sed in tale salutatus.</string>
    <string name="rating">Rating:</string>
    <string name="author">Author:</string>
    <string name="price">Price:</string>
    <string name="_8_00_omr">8.00 OMR</string>
    <string name="_8_00">8.00</string>
    <string name="omr">OMR</string>
    <string name="no_of_tickets">No of Tickets:</string>
    <string name="sub_total">Sub Total:</string>
    <string name="_15_5_omr">15.5 OMR</string>
    <string name="purchase_book">Purchase Book</string>
    <string name="book_entry_tickets">Book entry tickets</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_for">Search For</string>
    <string name="enter_something">Enter Something</string>
    <string name="searchfor">Search for:</string>
    <string name="sms">Send  SMS</string>
    <string name="sendEmail">Send  Email</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="location_of_clinic">Location of Clinic</string>
    <string name="services">Services:</string>
    <string name="type">Type</string>
    <string name="dermatology">Dermatology</string>
    <string name="book_session">Book Session</string>
    <string name="muscat">Muscat</string>
    <string name="no_of_sessions">No. of Sessions:</string>
    <string name="consultation_price">Consultation Price:</string>
    <string name="aboutus">About Us</string>
    <string name="clinics_list">Clinics List</string>
    <string name="our_application_is_one_of_the_first_apps_that_collects_local_clinics_in_oman_helping_the_customer_to_communicate_easier_with_the_any_clinic">Our application is one of the first apps that collects local clinics in Oman, helping the customer to communicate easier with the any clinic.</string>
    <string name="back">Back</string>
</resources>