<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@color/black"
    android:padding="20dp">


    <TextView
        android:id="@+id/tvClinicNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvBookGenreDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_genre"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/teal_200"
        android:layout_below="@id/tvClinicNameDetail"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvClinicTypeTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_published"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/ivClinicImageDetail"
        android:paddingTop="10dp"
        />
    <TextView
        android:id="@+id/tvPriceTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:paddingTop="15dp"
        />
    <TextView
        android:id="@+id/tvRatingTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:textColor="@color/white"
        android:layout_below="@id/tvClinicTypeTextDetail"
      />
    <TextView
        android:id="@+id/tvClinicTypeTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingTop="8dp"
        android:layout_below="@id/tvRatingTextDetail"
        />

    <ScrollView
        android:id="@+id/svClinicDesc"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_above="@id/tvPriceTextDetail"
        android:layout_marginTop="20dp"
        android:background="@color/teal_200"

        >
        <TextView
            android:id="@+id/tvDescriptionDetail"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_description"
            android:textSize="20sp"
            android:textColor="@color/white"

            />
    </ScrollView>

    <TextView
        android:id="@+id/tvPriceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8_00"
        android:textSize="30sp"
        android:textColor="@color/Palegreen"
        android:layout_alignParentBottom="true"
       android:paddingLeft="10dp"
        android:layout_toEndOf="@id/tvPriceTextDetail"
        android:layout_toRightOf="@id/tvPriceTextDetail" />

    <TextView
        android:id="@+id/tvClinicLocationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2010"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/grey"
        android:padding="10dp"
        android:layout_toRightOf="@id/tvClinicTypeTextDetail"
        android:layout_below="@id/ivClinicImageDetail"
        android:layout_toEndOf="@id/tvClinicTypeTextDetail"
       />
    <TextView
        android:id="@+id/tvClinicTypeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paul_kalanithi"
        android:textSize="16sp"
        android:padding="6dp"
        android:textColor="@color/grey"
        android:layout_toRightOf="@id/tvClinicTypeTextDetail"
        android:layout_below="@id/ivBookRatingDetail"
        android:layout_toEndOf="@id/tvClinicTypeTextDetail"
        />
    <ImageView
        android:id="@+id/ivClinicImageDetail"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:src="@drawable/breath"
        android:layout_below="@id/tvBookGenreDetail"
        android:padding="10dp"
        android:layout_centerHorizontal="true"

        />
    <ImageView
        android:id="@+id/ivBookRatingDetail"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:paddingLeft="5dp"
        android:src="@drawable/four_half"
        android:layout_toRightOf="@id/tvRatingTextDetail"
        android:layout_below="@id/tvClinicLocationDetail"
        android:layout_toEndOf="@id/tvRatingTextDetail"
         />

</RelativeLayout>