<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="160dp"
    android:padding="15dp"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivClinicImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/kaya"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

   <!-- <ImageView
        android:id="@+id/ivBookImageName"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:src="@drawable/breath"
       /> -->
    <TextView
        android:id="@+id/tvClinicName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/clinic_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/ivClinicImage"
        android:layout_toEndOf="@id/ivClinicImage" />
   <!-- <TextView
        android:id="@+id/tvBookGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nonfiction_memoir"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/teal_200"
        android:layout_toEndOf="@id/ivBookImageName"
        android:layout_toRightOf="@id/ivBookImageName"
        android:layout_below="@id/tvBookName"
        /> -->
    <TextView
        android:id="@+id/tvClinicService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/grey"
        android:layout_below="@id/tvClinicLocation"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/ivClinicImage"/>
    <TextView
        android:id="@+id/tvClinicLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_of_clinic"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_toEndOf="@id/ivClinicImage"
        android:layout_toRightOf="@id/ivClinicImage"
        android:layout_below="@id/tvClinicName"
        />
   <!-- <ImageView
        android:id="@+id/ivBookRating"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:src="@drawable/four_half"
        android:layout_below="@id/tvBookAuthor"
        android:layout_toRightOf="@id/ivBookImageName"
        android:layout_toEndOf="@id/ivBookImageName" /> -->





</RelativeLayout>